ART 3.6
* Changed job templates directory to WEB-INF\thymeleaf\jobs
* Allow saving of pivottable.js state
* Allow modifying and saving of gridstack dashboard item positions

ART 3.5
* Add field to indicate use of groovy instead of sql in report source
* Added pivotTableJs, c3 and plotly as report formats for tabular reports
* Updated chinese translation
* Fix for mongodb reports showing blank
* Fix for dygraph database reports not working
* Fix for test dashboard report not using updated source
* Allow dynamic change of chart type for C3.js reports
* Added date range parameter type
* Added Plotly.js report type
* Fix for jobs select/deselect all in access rights config updating report groups

ART 3.4
* Allow jobs to specify the time zone in which the schedule will run
* Include template file in report export/import
* Provide a REST API for dealing with users. This is experimental and subject to change.
* Allow users to save parameter selections
* Allow use of GroovyRowResult data with "usesGroovy" queries
* Updated French translation (thanks to Pierre Blanchou)
* Have job next run date consider holidays
* Allow specifying of parameter default values for users and user groups
* Allow parameters to use fixed values
* Fix for secondary charts not being used
* Allow testing of report in edit report page
* Updated univocity-parsers, spring

ART 3.3
* Allow sending of email if there is an error with a particular job
* Added ReportEngine report types
* Fix for double values only showing one decimal value by default
* Allow dynamic recipient query to specify file open or modify password
* Added password encryptor
* Fix for multiple c3.js, pivottable.js, reactpivot, dygraphs, datatables, chart.js, datamaps, leaflet, openlayers, orgchart reports within a dashboad not displaying correctly. Leaflet and OpenLayers template files will require replacing the 'map' element id with the variable mapId.
* Allow import/export of repository artefacts